<resources>
    <string name="app_name">BatikU</string>

    <string name="title_activity_login">Sign in or create an account</string>
    <string name="title_activity_main">Dashboard</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Password (Diulang)</string>
    <string name="prompt_name">Nama Lengkap</string>
    <string name="prompt_phone">Nomor Telepon</string>
    <string name="action_sign_in">Masuk atau Mendaftar</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="action_register">Buat akun baru?</string>
    <string name="action_have_account">Sudah memiliki akun?</string>
    <string name="action_submit">Kirim</string>
    <string name="error_invalid_email">Alamat email tidak valid</string>
    <string name="error_unavailable_email">Email sudah pernah terdaftar</string>
    <string name="error_invalid_password">Password tidak valid</string>
    <string name="error_invalid_password_repeat">Ulangi password dengan benar</string>
    <string name="error_incorrect_password">Password yang Anda masukkan salah</string>
    <string name="error_old_password">Password lama salah</string>
    <string name="error_field_required">Kolom ini tidak boleh dikosongi</string>
    <string name="permission_rationale">"Izin kontak diperlukan untuk menyediakan penyelesaian email."</string>
    <string name="login_header_information">Isilah form ini dengan akun login anda,
        atau buat akun terlebih dahulu untuk dapat menggunakan aplikasi ini.</string>

    <string name="txt_welcome">Selamat datang</string>

    <string name="btn_logout">Logout</string>
    <string name="title_activity_home">Beranda</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>



    <!-- string uji coba -->
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate
        wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream
        sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="change_dessert">Change dessert</string>
    <string name="order_label_text">Order:</string>
    <string name="note_label_text">Note:</string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="phone_label_string">Phone</string>
    <string name="enter_phone_hint">Enter phone</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger
        service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="action_contact">Contact</string>
    <string name="action_cari">Cari</string>
    <string name="action_notif">Notifikasi</string>
    <string name="action_akun">Profil</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <!-- batas string uji coba -->


    <string name="daerah_batik">daerah batik</string>
    <string name="info_info">info-info</string>
    <string name="action_logout">Log Out</string>
    <string name="action_cari_message">pilih cari</string>
    <string name="action_akun_message">pilih akun</string>
    <string name="action_kontak_message">pilih kontak</string>
    <string name="action_notif_message">pilih notif</string>
    <string name="action_logout_message">pilih logout</string>
    <string name="teks_splash">"Lestarikan Batik Mu"</string>


</resources>