<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.droidcafeoptions.MainActivity">
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="200"
        android:title="@string/action_logout"
        android:icon="@drawable/ic_action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        android:icon="@drawable/ic_action_pengaturan"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cari"
        android:icon="@drawable/ic_action_cari"
        android:orderInCategory="10"
        android:title="@string/action_cari"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_notif"
        android:icon="@drawable/ic_action_notif"
        android:orderInCategory="20"
        android:title="@string/action_notif"
        app:showAsAction="always|never" />
    <item
        android:id="@+id/action_akun"
        android:icon="@drawable/ic_action_akun"
        android:orderInCategory="30"
        android:title="@string/action_akun"
        app:showAsAction="ifRoom" />
</menu>