<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/gambarBatik"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/namaBatik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginLeft="32dp"
                    android:layout_toEndOf="@id/gambarBatik"
                    android:layout_toRightOf="@id/gambarBatik"
                    android:layout_marginStart="32dp" />

                <TextView
                    android:id="@+id/daerahBatik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daerah_batik"
                    android:layout_below="@id/namaBatik"
                    android:layout_toEndOf="@id/gambarBatik"
                    android:layout_marginLeft="32dp"
                    android:layout_toRightOf="@id/gambarBatik"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="32dp" />

                <TextView
                    android:id="@+id/infoBatik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_info"
                    android:layout_marginLeft="32dp"
                    android:layout_alignBottom="@id/gambarBatik"
                    android:layout_toRightOf="@id/gambarBatik"
                    android:layout_toEndOf="@id/gambarBatik"
                    android:layout_marginStart="32dp" />


        </RelativeLayout>


</androidx.cardview.widget.CardView>